cabal-version:       2.2

name:                helct
version:             0.1.0.0

synopsis:            HELCT - Heavenly Esoteric Little C Transpiler to Esoteric Languages implemented in Haskell/Eta
description:         Please see the README on GitHub at <https://github.com/helvm/helct#readme>
homepage:            https://helvm.github.io/helct/
bug-reports:         https://github.com/helvm/helct/issues

license:             Apache-2.0
license-file:        docs/LICENSE
author:              Kamil Adam
maintainer:          kamil.adam.zabinski@gmail.com
copyright:           2020-2021 WriteOnly Developers

category:            Language
build-type:          Simple
extra-source-files:  docs/CHANGELOG.md

source-repository head
  type:              git
  location:          https://github.com/helvm/helct

library
  other-modules:
  exposed-modules:

  other-extensions:
  build-depends:
      base                 < 4.16
    , relude               == 0.7.0.0
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra)
  hs-source-dirs:      hs/src
  default-language:    Haskell2010
  ghc-options:
--Extensions
    -XEmptyDataDecls
    -XExistentialQuantification
    -XFlexibleContexts
    -XFlexibleInstances
    -XFunctionalDependencies
    -XGADTs
    -XGeneralizedNewtypeDeriving
    -XInstanceSigs
    -XKindSignatures
    -XLambdaCase
    -XMonadFailDesugaring
    -XMultiParamTypeClasses
    -XMultiWayIf
    -XNamedFieldPuns
--    -XNoImplicitPrelude
    -XOverloadedStrings
    -XPartialTypeSignatures
    -XPatternGuards
    -XPolyKinds
    -XRankNTypes
    -XRecordWildCards
    -XScopedTypeVariables
    -XStandaloneDeriving
    -XTupleSections
    -XTypeFamilies
    -XTypeSynonymInstances
    -XViewPatterns
--    -XCPP
--    -XTemplateHaskell
--    -XForeignFunctionInterface
--    -XMagicHash
--    -XUnliftedFFITypes
    -XTypeOperators
--    -XUnboxedTuples
--    -XPackageImports
--    -XQuasiQuotes
--    -XDeriveAnyClass
--    -XDeriveLift
--    -XStaticPointers
--Only for lib
    -XDeriveFunctor
--Warnings
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
--    -Wmissing-export-lists FIXME
    -Wpartial-fields
--    -Wmissing-deriving-strategies (GHC ⩾ 8.8)
--    -fwrite-ide-info              (GHC ⩾ 8.8)
--    -hiedir=.hie                  (GHC ⩾ 8.8)
--    -Wunused-packages             (GHC ⩾ 8.10)
    -Werror

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:
        Spec

        HelVM.HelCT.Assemblers.Expectations
  other-extensions:
  build-depends:
      base                 < 4.16
    , relude               == 0.7.0.0
    , split

    , attoparsec
    , sort

    , helct
    , hspec
    , hspec-attoparsec
    , hspec-expectations-pretty
    , hspec-slow
    , QuickCheck
    , smallcheck
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra)
  hs-source-dirs:      hs/test
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
--Extensions
    -XEmptyDataDecls
    -XExistentialQuantification
    -XFlexibleContexts
    -XFlexibleInstances
    -XFunctionalDependencies
    -XGADTs
    -XGeneralizedNewtypeDeriving
    -XInstanceSigs
    -XKindSignatures
    -XLambdaCase
    -XMonadFailDesugaring
    -XMultiParamTypeClasses
    -XMultiWayIf
    -XNamedFieldPuns
--    -XNoImplicitPrelude
    -XOverloadedStrings
    -XPartialTypeSignatures
    -XPatternGuards
    -XPolyKinds
    -XRankNTypes
    -XRecordWildCards
    -XScopedTypeVariables
    -XStandaloneDeriving
    -XTupleSections
    -XTypeFamilies
    -XTypeSynonymInstances
    -XViewPatterns
--    -XCPP
--    -XTemplateHaskell
--    -XForeignFunctionInterface
--    -XMagicHash
--    -XUnliftedFFITypes
--    -XTypeOperators
--    -XUnboxedTuples
--    -XPackageImports
--    -XQuasiQuotes
--    -XDeriveAnyClass
--    -XDeriveLift
--    -XStaticPointers
--Warnings
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
--    -Wmissing-export-lists FIXME
    -Wpartial-fields
--    -Wmissing-deriving-strategies (GHC ⩾ 8.8)
--    -fwrite-ide-info              (GHC ⩾ 8.8)
--    -hiedir=.hie                  (GHC ⩾ 8.8)
--    -Wunused-packages             (GHC ⩾ 8.10)
    -Werror
--Only for tests
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable helct
  main-is:             Main.hs
  other-modules:
        AppOptions

  other-extensions:
  build-depends:
      base                 < 4.16
    , relude               == 0.7.0.0
    , split
    , optparse-applicative >= 0.14.3.0

    , attoparsec
    , helct
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra)
  hs-source-dirs:      hs/app
  default-language:    Haskell2010
  ghc-options:
--Extensions
    -XEmptyDataDecls
    -XExistentialQuantification
    -XFlexibleContexts
    -XFlexibleInstances
    -XFunctionalDependencies
    -XGADTs
    -XGeneralizedNewtypeDeriving
    -XInstanceSigs
    -XKindSignatures
    -XLambdaCase
    -XMonadFailDesugaring
    -XMultiParamTypeClasses
    -XMultiWayIf
    -XNamedFieldPuns
--    -XNoImplicitPrelude
    -XOverloadedStrings
    -XPartialTypeSignatures
    -XPatternGuards
    -XPolyKinds
    -XRankNTypes
    -XRecordWildCards
    -XScopedTypeVariables
    -XStandaloneDeriving
    -XTupleSections
    -XTypeFamilies
    -XTypeSynonymInstances
    -XViewPatterns
--    -XCPP
--    -XTemplateHaskell
--    -XForeignFunctionInterface
--    -XMagicHash
--    -XUnliftedFFITypes
--    -XTypeOperators
--    -XUnboxedTuples
--    -XPackageImports
--    -XQuasiQuotes
--    -XDeriveAnyClass
--    -XDeriveLift
--    -XStaticPointers
--Warnings
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
--    -Wmissing-export-lists FIXME
    -Wpartial-fields
--    -Wmissing-deriving-strategies (GHC ⩾ 8.8)
--    -fwrite-ide-info              (GHC ⩾ 8.8)
--    -hiedir=.hie                  (GHC ⩾ 8.8)
--    -Wunused-packages             (GHC ⩾ 8.10)
    -Werror
