cabal-version:         2.4

name:                  helct
version:               0.1.0.1

synopsis:              HELCT - Heavenly Esoteric Little C Transpiler to Esoteric Languages
description:           Please see the README on GitHub at <https://github.com/helvm/helct#readme>
homepage:              https://helvm.github.io/helct/
bug-reports:           https://github.com/helvm/helct/issues

license:               Apache-2.0
license-file:          docs/license/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2021 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/developers/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.10.1

source-repository head
  type:                git
  location:            https://github.com/helvm/helct

common common-options
  build-depends:
      base             <  4.21
    , relude           ==  1.2.2.0
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text)
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
--    -Wmissing-export-lists FIXME
    -Wpartial-fields
    -Wmissing-deriving-strategies
    -fwrite-ide-info
    -hiedir=.hie
    -Wunused-packages
--    -Werror
    -fprint-potential-instances

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:
    HelVM.HelCT.HelCT

  other-extensions:
  build-depends:
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra)
  hs-source-dirs:      hs/src
  default-language:    Haskell2010
  ghc-options:

executable helct
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    AppOptions
  build-depends:
--      helct
--    , optparse-applicative >= 0.14.3.0
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite helct-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Slow
    Spec
  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden
    , hspec-slow
    , mtl
    , stm
    , time

    , helct

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

--benchmark helct-benchmark
--  import:              common-options
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      hs/benchmark
--  main-is:             Main.hs
--  build-depends:
--      gauge

--    , helct

--  ghc-options:
--    -threaded
--    -rtsopts
--    -with-rtsopts=-N
